<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jarvis 1.0</string>
    <string name="summary">Enter a Title</string>
    <string name="startTime">Enter a Start Date and Time</string>
    <string name="endTime">Enter an End Date and Time</string>
    <string name="desc">Enter a description</string>
    <string name="button_ok">OK</string>
    <string name="button_view_months_events">View this Month</string>
    <string name="button_cancel">Cancel</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Add an Event:</string>
    <string name="title_activity_choose__calendar">Choose a Calendar</string>
    <string name="title_activity_show__success">Success!!</string>
    <string name="success_on_add_event">Event Successfully Added</string>
    <string name="add_another_event_button">Add another event</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_events">Today\'s Events</string>

</resources>