<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	
	    <EditText android:id="@+id/summary"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:hint="@string/summary" />
	    <TextView android:text="@string/startTime"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        />
	   	<DatePicker android:id="@+id/startDate"
	   	    		android:calendarViewShown="false"
	   	    		android:spinnersShown="true"
	   	    		android:startYear="2010"
	   	    		android:endYear="2030"
	   	    		android:layout_weight="10"
	        		android:layout_width="match_parent"
	        		android:layout_height="0dp"
	   	    		/>

	   	<TimePicker
	   	    android:id="@+id/startTime"
	   	    android:layout_width="match_parent"
	   	    android:layout_height="0dp"
	   	    android:layout_weight="7.27" />

	   	<TextView android:text="@string/endTime"
	        android:layout_weight="1"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        />
	   	<DatePicker android:id="@+id/endDate"
	   	    		android:calendarViewShown="false"
	   	    		android:spinnersShown="true"
	   	    		android:startYear="2010"
	   	    		android:endYear="2030"
	   	    		android:layout_weight="10"
	        		android:layout_width="match_parent"
	       	 		android:layout_height="0dp"
	   	    		/>
	   	<TimePicker android:id="@+id/endTime"
	   	   	android:layout_weight="4"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	   	    	/>

	    <EditText android:id="@+id/desc"
	        android:layout_weight="3"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:hint="@string/desc" />
	    <Button
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:text="@string/button_ok" 
	        android:onClick="addCalendarEvent"/>
	    <Button
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:text="@string/button_view_months_events" 
	        android:onClick="getTodaysEvents"/>
	
	</LinearLayout>
</ScrollView>